# zuspec-arl-dm

./: .cproject  .gitignore  .project  Agents.md  CMakeLists.txt  README.md  ivpm.yaml  setup.py
.clinerules/: 01_building.md
.github/workflows/: ci.yml
doc/: ActivityModel.md  ComponentsPoolsClaims.md  EvaluationIteration.md
docs/: CapturingRegData.md  ComponentsPoolsClaims.md  FlowObjectBinding.md  RepresentingRegisters.md  ScheduleChoices.md
python/: MkModelBuildContextArl.cpp  VisitorProxy.cpp  VisitorProxy.h  core.pyx  py_get_arl.cpp  py_get_arl.h
python/libarl/: core.pxd  decl.pxd
python/zsp_arl_dm/: __init__.py  __version__.py  core.pxd  decl.pxd  pkginfo.py  py_val_to_val_ref.py  val_ref_to_py_val.py
scripts/: build_linux.sh
src/: ActionSolveData.cpp  ActionSolveData.h  ActivityScheduleData.cpp  ActivityScheduleData.h  ArlImpl.cpp  ArlImpl.h  CMakeLists.txt  ComponentMap.cpp  ComponentMap.h  Context.cpp  Context.h  ContextDumperJSON.cpp  ContextDumperJSON.h  DataTypeAction.cpp  DataTypeAction.h  DataTypeActivityBind.cpp  DataTypeActivityBind.h  DataTypeActivityParallel.cpp  DataTypeActivityParallel.h  DataTypeActivityReplicate.cpp  DataTypeActivityReplicate.h  DataTypeActivitySchedule.cpp  DataTypeActivitySchedule.h  DataTypeActivityScope.cpp  DataTypeActivityScope.h  DataTypeActivitySequence.cpp  DataTypeActivitySequence.h  DataTypeActivityStmt.cpp  DataTypeActivityStmt.h  DataTypeActivityTraverse.cpp  DataTypeActivityTraverse.h  DataTypeActivityTraverseType.cpp  DataTypeActivityTraverseType.h  DataTypeAddrClaim.cpp  DataTypeAddrClaim.h  DataTypeAddrClaimTransparent.cpp  DataTypeAddrClaimTransparent.h  DataTypeAddrHandle.cpp  DataTypeAddrHandle.h  DataTypeAddrSpaceC.cpp  (+329 more)
src/include/: TypeFieldAddrClaim.cpp  TypeFieldAddrClaim.h
src/include/arl/: IArl.h  IContext.h  IDataTypeAction.h  IDataTypeActivity.h  IDataTypeActivitySchedule.h  IDataTypeActivityScope.h  IDataTypeActivitySequence.h  IDataTypeActivityTraverse.h  IDataTypeActivityTraverseType.h  IDataTypeComponent.h  IDataTypeFlowObj.h  IDataTypeFunction.h  IDataTypeStruct.h  IMarker.h  IModelActivity.h  IModelActivityParallel.h  IModelActivitySchedule.h  IModelActivityScope.h  IModelActivitySequence.h  IModelActivityTraverse.h  IModelBuildContext.h  IModelComponentTreeData.h  IModelEvalIterator.h  IModelEvaluator.h  IModelFieldAction.h  IModelFieldClaim.h  IModelFieldComponent.h  IModelFieldComponentRoot.h  IModelFieldExecutor.h  IModelFieldExecutorClaim.h  IModelFieldExecutorGroup.h  IModelFieldInOut.h  IModelFieldPool.h  IModelFieldRootComponent.h  IModelStructCreateHook.h  IPoolBindDirective.h  IType.h  ITypeActivityScope.h  ITypeActivitySequence.h  ITypeActivityStmt.h  (+22 more)
src/include/arl/impl/: CopyVisitor.h  ModelBuildContext.h  TaskVisitModelFieldClaim.h  TaskVisitModelFieldInOut.h  VisitorBase.h  VisitorDelegator.h
src/include/arl/sav/: ITypeActivityScope.h  ITypeActivitySequence.h  ITypeActivityStmtTraverse.h  ITypeActivityStmtTraverseType.h
src/include/zsp/arl/dm/: FactoryExt.h  IAccept.h  IArl.h  IComponentMap.h  IContext.h  IContextDumper.h  IContextLoader.h  IDataTypeAction.h  IDataTypeActivity.h  IDataTypeActivityBind.h  IDataTypeActivityParallel.h  IDataTypeActivityReplicate.h  IDataTypeActivitySchedule.h  IDataTypeActivityScope.h  IDataTypeActivitySequence.h  IDataTypeActivityTraverse.h  IDataTypeActivityTraverseType.h  IDataTypeAddrClaim.h  IDataTypeAddrClaimTransparent.h  IDataTypeAddrHandle.h  IDataTypeAddrSpaceC.h  IDataTypeAddrSpaceTransparentC.h  IDataTypeArlStruct.h  IDataTypeComponent.h  IDataTypeCoreLibComponent.h  IDataTypeFlowObj.h  IDataTypeFunction.h  IDataTypeFunctionImport.h  IDataTypeFunctionParamDecl.h  IDataTypePackedStruct.h  IDataTypePureComponent.h  IDataTypePyObj.h  IDataTypeReg.h  IDataTypeRegGroup.h  IDataTypeResource.h  IDataTypeStruct.h  IDataTypeTransparentAddrSpace.h  IFactory.h  IMarker.h  IModelActivity.h  (+80 more)
src/include/zsp/arl/dm/impl/: ContextDelegator.h  CopyVisitor.h  IsResourcePool.h  ModelBuildContext.h  ModelEvalIteratorListenerBase.h  RewriteVisitorBase.h  TaskActionHasMemClaim.h  TaskCollectTopLevelActivities.h  TaskFindExecutor.h  TaskGetExprDataType.h  TaskGetSubField.h  TaskGetTypeBitWidth.h  TaskIsDataTypeFlowObj.h  TaskIsDataTypePyObj.h  TaskIsPackedStruct.h  TaskIsRefGroupRef.h  TaskIsTypeFieldRegGroup.h  TaskIsTypeFieldRegGroupArr.h  TaskPackStruct2Int.h  TaskUnpackInt2Struct.h  TaskVisitActionTypeClaimRef.h  TaskVisitModelFieldClaim.h  TaskVisitModelFieldInOut.h  ValRefAction.h  ValRefActivity.h  ValRefActivityScope.h  ValRefPyObj.h  ValRefRegGroup.h  VisitorBase.h  VisitorDelegator.h
src/sav/: TypeActivityScope.cpp  TypeActivityScope.h  TypeActivitySequence.cpp  TypeActivitySequence.h  TypeActivityStmtTraverse.cpp  TypeActivityStmtTraverse.h  TypeActivityStmtTraverseType.cpp  TypeActivityStmtTraverseType.h
test/: CMakeLists.txt  TestActivitySolveModel.cpp  TestActivitySolveModel.h  TestBase.cpp  TestBase.h  TestElaborateActivity.cpp  TestElaborateActivity.h  TestModelEvalIterator.cpp  TestModelEvalIterator.h  TestScheduleGraphNode.cpp  TestScheduleGraphNode.h  TestScheduleRelSet.cpp  TestScheduleRelSet.h  TestStaticBind.cpp  TestStaticBind.h  test_runner.cpp
test/src/: TestBase.cpp  TestBase.h  TestJsonDumper.cpp  TestJsonDumper.h  TestRegisterModel.cpp  TestRegisterModel.h
tests/unit/: test_activity.py  test_context.py  test_replicate.py  test_visitor.py
